fix spacing and main heading

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -77,10 +77,10 @@ $black: #2b2523
 .navbar-item .icon
   color: $primary
 .navbar-item-active
-  color: white !important
+  color: lightgrey !important
   background: $primary
 #navMenu a.navbar-item-active:hover
-  color: lightgrey !important
+  color: #4a4a4a !important
   background: $primary !important
 // Override for use of svg's from https://simpleicons.org/
 .icon svg
@@ -159,3 +159,6 @@ $menu-label-color: $white-ter
   iframe 
     width: 90%
     height: 500px
+
+.section
+  padding-top: 1rem
